Fix options page appearance on Firefox when dark mode is on

--- a/chromium/pages/options/style.css
+++ b/chromium/pages/options/style.css
@@ -1,6 +1,23 @@
 body{
   min-width: 500px;
+  min-height: 250px;
   display: block;
+}
+
+@media (prefers-color-scheme: dark) {
+  body {
+    background-color: #202023;
+    color: #f9f9fa;
+  }
+
+  .section-header-span, div#update-channels-warning {
+    color: #000;
+  }
+
+  textarea, input[type=text] {
+    background-color: #202023;
+    color: #f9f9fa;
+  }
 }
 
 a.settings{
